class AttachmentSource < ApplicationRecord
  belongs_to :attachment
end
