@startuml
allowmixing
hide empty members

note "Generated diagram on 2023-05-18 " as Note1

' Generated for classes Attachment,AttachmentData,Image,ImageData
' Options: {:show_associations=>true, :show_concerns=>true, :extra_classes=>true}

rectangle "Attachment Family" {
class Attachment
class HtmlAttachment
class FileAttachment
class ExternalAttachment
}
class AttachmentData
class Image
class ImageData
metaclass HasContentId <<concern>>
metaclass Attachable <<concern>>
class AttachmentSource
class GovspeakContent
metaclass CarrierWave::Validations::ActiveModel <<concern>>
class Edition
Attachment <|-- HtmlAttachment #line:blue;line.bold
Attachment <|-- FileAttachment #line:blue;line.bold
Attachment <|-- ExternalAttachment #line:blue;line.bold
HtmlAttachment .u.|> HasContentId
FileAttachment .u.|> HasContentId
ExternalAttachment .u.|> HasContentId
AttachmentData .u.|> CarrierWave::Validations::ActiveModel
ImageData .u.|> CarrierWave::Validations::ActiveModel
Attachment --> Attachable : "belongs_to"
Attachment --> AttachmentSource : "has_one"
Attachment --> AttachmentData : "belongs_to"
HtmlAttachment --> GovspeakContent : "has_one"
AttachmentData --> Attachment : "has_many"
AttachmentData --> AttachmentData : "belongs_to"
Image --> ImageData : "belongs_to"
Image --> Edition : "belongs_to"
ImageData --> Image : "has_many"
@enduml